--- a/ProjectUI/MainWindow.xaml
+++ b/ProjectUI/MainWindow.xaml
@@ -5,13 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Background="DarkSeaGreen">
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="600" Width="1000">
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox x:Name="TxbInput" Grid.Column="0" AcceptsReturn="True" Margin="10, 10, 10, 10"/>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1.5*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+
+                <TextBox x:Name="TbInput" Grid.Row="0"
+                         Text="//Write your code here..."
+                         AcceptsReturn="True"
+                         AcceptsTab="True"
+                         FontSize="16"
+                         FontFamily="Consolas"
+                         VerticalScrollBarVisibility="Auto"
+                         HorizontalScrollBarVisibility="Auto"
+                         Background="#1a1818"
+                         Foreground="White"/>
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="BtnRun" Content="Run"
+                        Grid.Column="2"
+                        FontWeight="Bold"
+                        Background="ForestGreen"
+                        Foreground="White"
+                        FontSize="15" Click="BtnRun_Click"
+                        />
+                    <Button x:Name="BtnRunStep" Content="Step by Step Run"
+                        Grid.Column="1"
+                            Foreground="White"
+                            Background="DarkOrchid"
+                            FontSize="15"
+                        />
+                    <Button x:Name="BtnClear" Content="Clear"
+                        Grid.Column="0"
+                        Background="Red"
+                        Foreground="White"
+                        FontSize="16" Click="BtnClear_Click"
+                        />
+                </Grid>
+            </Grid>
+            <Grid Grid.Row="1">
+                <TextBox x:Name="TbOutput"
+                           Text="Output will be here..."
+                           Background="#1a1818"
+                           Foreground="White"
+                           FontSize="16"
+                           FontFamily="Consolas"
+                           IsReadOnly="True"
+                           VerticalScrollBarVisibility="Auto"
+                           />
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="0.5*"/>
+            </Grid.RowDefinitions>
+            <Label x:Name="LblLocation"
+                   Content="Current Location: (0, 0)"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontWeight="Bold"
+                   FontSize="16"/>
+            
+            <Grid x:Name="Board" Grid.Row="1" ShowGridLines="True">
+                
+            </Grid>
+
+            <StackPanel Grid.Row="2" Orientation="Horizontal"
+                        Background="DimGray">
+                <Label Content="Code compiled succefully" VerticalAlignment="Center"
+                       FontWeight="Bold"/>
+            </StackPanel>
+            
+        </Grid>
     </Grid>
 </Window>
