--- a/ProjectUI/MainWindow.xaml
+++ b/ProjectUI/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ProjectUI"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="MainWindow" Height="600" Width="1000">
+        Title="Compiler" Height="600" Width="1000">
     <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
